--- a/quiz/templates/pages/index.html
+++ b/quiz/templates/pages/index.html
@@ -156,7 +156,7 @@
     <img class="card__info card__close left-menu-data__close" src="{% static "images/header/close.svg" %}" alt="close" />
     <p class="left-menu__title">Личные данные</p>
     <div class="left-menu__data data">
-      <img src={% static "images/no-img.png" %} alt="photo" class="data__img" />
+      <img src=# alt="photo" class="data__img" />
       <p class="data__item">
         <span>ФИО:</span>
         <span class="data__item--name">Загрузка...</span>
